--- a/estilo.css
+++ b/estilo.css
@@ -1,80 +1,34 @@
-body {
-    background-color: rgba(208, 250, 200, 0.2);
+#titulo{
+    text-align: center;
+    color: rgb(16, 109, 16);
 }
 
-h3 {
-    color: rgb(0,129,49);
-}
-
-label{
-    font-size: 20px;
-}
-
-.add-button {
-    background-color: rgb(0,121,38);
-}
-
-.bottom-space {
-    margin-bottom: 50px;
+body{
+   background-color: rgb(243, 253, 239); 
 }
 
 .container {
     padding: 75px 20%;
 }
 
+.bottom-space{
+    margin-bottom: 40px;
+}
+
+.painel-carteira {
+    aspect-ratio: 2/1;
+}
+
+.painel-titulo {
+    text-align: center;
+    color: rgb(0,129,49);
+}
+
+.painel-conteudo {
+    text-align: right;
+    margin-top: 15%
+}
 
 .shadow {
     box-shadow: 4px 4px 0 rgb(0,0,0,0.2);
 }
-
-input[type='checkbox'].switch {
-    opacity: 0;
-    position: absolute;
-    left: -9000px;
-    top: -9000px;
-}
-
-input[type='checkbox'].switch + label {
-    position: relative;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-
-
-input[type='checkbox'].switch + label::before {
-    content: '';
-    width: 2em;
-    height: 1em;
-    background-color: rgb(245, 177, 177);
-    outline: 1px solid red;
-    border-radius: 1em;
-    margin-right: 0.25em;
-
-}
-
-input[type='checkbox'].switch:checked + label::before {
-    background-color: rgb(165, 243, 178);
-    outline: 1px solid green;
-}
-
-input[type='checkbox'].switch + label::after {
-    position: absolute;
-    left: 0.1em;
-    content: '';
-    width: .9em;
-    height: .9em;
-    background-color: red;
-    border-radius: 1em;
-    margin-right: 0.25em;
-
-}
-
-input[type='checkbox'].switch:checked + label::after {
-    transform: translateX(100%);
-    background-color: green;
-
-}
-
-
-
